# tidy-data-anna

./: .gitignore  DORAHACKS_SUBMISSION.md  README.md  app.json  manifest.json  package-lock.json  package.json
.github/workflows/: build-tidy-engine-binary.yml
bundle/: app.js  index.html  style.css
executas/tidy-coach/: SKILL.md  executa.json
executas/tidy-engine-python/: executa.json  package_binary.sh  pyproject.toml  test_engine_contract.py  tidy_engine_plugin.py
fixtures/: happy-path.jsonl
