[project]
name = "tool-test-tidy-engine-12345678"
version = "1.0.0"
description = "Deterministic spreadsheet/CSV cleaning engine — Anna Executa stdio tool."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
"tool-test-tidy-engine-12345678" = "tidy_engine_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["tidy_engine_plugin.py"]

[tool.hatch.build.targets.wheel.sources]
"tidy_engine_plugin.py" = "tidy_engine_plugin.py"
